Add markup and a11y attributes
Gives my calculator the basic structure and the
attributes are needed to give assistive
technologies information about the elements on
screen.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,170 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
-</head>
-<body>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css" />
+        <title>Calculator</title>
+    </head>
+    <body>
+        <div class="keyboard-wrapper">
+            <div
+                class="display"
+                role="presentation"
+                tabindex="0"
+                aria-roledescription="display"
+            >
+                2 + 2
+            </div>
+            <div class="keyboard">
+                <div class="keyboard-row">
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        /
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        9
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        8
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        7
+                    </div>
+                </div>
+                <div class="keyboard-row">
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        *
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        6
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        5
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        4
+                    </div>
+                </div>
+                <div class="keyboard-row">
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        -
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        3
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        2
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        1
+                    </div>
+                </div>
+                <div class="keyboard-row">
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        +
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        =
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        ,
+                    </div>
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        0
+                    </div>
+                </div>
+                <div class="keyboard-row">
+                    <div
+                        class="input"
+                        role="button"
+                        tabindex="0"
+                        aria-roledescription="key"
+                    >
+                        Clear
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
