Add functionality to calculator
The calculator can use the previously defined
functions to display the result into the
display section.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
                 role="presentation"
                 tabindex="0"
                 aria-roledescription="display"
-            >
-                2 + 2
-            </div>
+            ></div>
             <div class="keyboard">
                 <div class="keyboard-row">
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -28,7 +26,7 @@
                         7
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -36,7 +34,7 @@
                         8
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -44,7 +42,7 @@
                         9
                     </div>
                     <div
-                        class="input"
+                        class="input operation-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -54,7 +52,7 @@
                 </div>
                 <div class="keyboard-row">
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -62,7 +60,7 @@
                         4
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -70,7 +68,7 @@
                         5
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -78,7 +76,7 @@
                         6
                     </div>
                     <div
-                        class="input"
+                        class="input operation-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -88,7 +86,7 @@
                 </div>
                 <div class="keyboard-row">
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -96,7 +94,7 @@
                         1
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -104,7 +102,7 @@
                         2
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -112,7 +110,7 @@
                         3
                     </div>
                     <div
-                        class="input"
+                        class="input operation-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -122,7 +120,7 @@
                 </div>
                 <div class="keyboard-row">
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -130,7 +128,7 @@
                         0
                     </div>
                     <div
-                        class="input"
+                        class="input num-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -138,7 +136,7 @@
                         ,
                     </div>
                     <div
-                        class="input"
+                        class="input equal-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -146,7 +144,7 @@
                         =
                     </div>
                     <div
-                        class="input"
+                        class="input operation-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
@@ -156,7 +154,7 @@
                 </div>
                 <div class="keyboard-row">
                     <div
-                        class="input"
+                        class="input clear-field"
                         role="button"
                         tabindex="0"
                         aria-roledescription="key"
